created main screen and elements multi-language support

--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -10,6 +10,30 @@
   "errorTitle": "Error",
   "loginErrorMessage": "Invalid username or password!",
   "loginSuccessMessage": "Login Successful, Welcome.",
-
-  "":""
+  "orderCreation": "Order Creation",
+  "products": "Products",
+  "productEntry": "Product Entry",
+  "returnProcesses": "Return Processes",
+  "receipts": "Receipts",
+  "reports": "Reports",
+  "storeNo": "Store No: ",
+  "cashRegisterNo": "Cash Register No: ",
+  "ipNo": "IP No: ",
+  "version": "Version: ",
+  "homepage": "Homepage",
+  "orderCreationScreen": "Order Creation Screen",
+  "paymentScreen": "Payment Screen",
+  "returnScreen": "Return Screen",
+  "productListingScreen": "Product Listing Screen",
+  "productView": "Product View",
+  "productAddScreen": "Product Add Screen",
+  "viewingProduct": "Viewing Product No: ",
+  "receiptNumber": "Receipt No: ",
+  "title": "Title",
+  "cashRegister": "Cash Register: ",
+  "store": "Store: ",
+  "settings": "SETTINGS",
+  "dark-mode": "Dark Mode",
+  "lang": "Language",
+  "print-test": "Print Test"
 }
