created payment dashboard and elements multi-language support

--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -52,5 +52,25 @@
   "offlineErrorTitle": "Oops! We're currently offline.",
   "offlineErrorMessage": "Sorry for the inconvenience. Please check our operating hours below and visit us again during those times.",
   "nextShopOpeningTime": "Next Shop Opening Time:",
-  "tryRefreshing": "Try refreshing the page"
+  "tryRefreshing": "Try refreshing the page",
+  "eInvoice": "E-Invoice",
+  "customerEmail": "Customer Email",
+  "invalidEmailError": "This is not a valid email address!",
+  "contributeToNature": "You're contributing to nature! By choosing e-invoice, you reduce unnecessary paper usage. Thank you!",
+  "subTotal": "Subtotal:",
+  "totalAmount": "Total Amount",
+  "cancelTransaction": "Cancel Transaction",
+  "cancelTransactionWarning": "You are about to cancel the order. If confirmed, the paid amount will be refunded, and the products will not be delivered to the customer.",
+  "confirmPayment": "Confirm Payment",
+  "refundAmount": "Refund Amount: ",
+  "cash": "Cash",
+  "creditCard": "Credit Card",
+  "simulatePayment": "Simulate Payment",
+  "simulatePaymentWarning": "This application is not real, so we should assume whether the payment was made correctly or not!",
+  "totalPrice": "Total Price",
+  "paidWithCard": "Paid with card!",
+  "paidInCash": "Paid in cash!",
+  "paidAmount": "Paid Amount:",
+  "remainingAmount": "Remaining Amount:",
+  "change": "Change:"
 }
