created sales dashboard and elements multi-language support

--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -16,10 +16,10 @@
   "returnProcesses": "Return Processes",
   "receipts": "Receipts",
   "reports": "Reports",
-  "storeNo": "Store No: ",
-  "cashRegisterNo": "Cash Register No: ",
-  "ipNo": "IP No: ",
-  "version": "Version: ",
+  "storeNo": "Store No",
+  "cashRegisterNo": "Cash Register No",
+  "ipNo": "IP No",
+  "version": "Version",
   "homepage": "Homepage",
   "orderCreationScreen": "Order Creation Screen",
   "paymentScreen": "Payment Screen",
@@ -27,10 +27,10 @@
   "productListingScreen": "Product Listing Screen",
   "productView": "Product View",
   "productAddScreen": "Product Add Screen",
-  "viewingProduct": "Viewing Product No: ",
+  "viewingProduct": "Viewing Product No",
   "title": "Title",
-  "cashRegister": "Cash Register: ",
-  "store": "Store: ",
+  "cashRegister": "Cash Register",
+  "store": "Store",
   "settings": "SETTINGS",
   "dark-mode": "Dark Mode",
   "lang": "Language",
@@ -50,18 +50,18 @@
   "Sunday": "Sunday",
   "offlineErrorTitle": "Oops! We're currently offline.",
   "offlineErrorMessage": "Sorry for the inconvenience. Please check our operating hours below and visit us again during those times.",
-  "nextShopOpeningTime": "Next Shop Opening Time:",
+  "nextShopOpeningTime": "Next Shop Opening Time",
   "tryRefreshing": "Try refreshing the page",
   "eInvoice": "E-Invoice",
   "customerEmail": "Customer Email",
   "invalidEmailError": "This is not a valid email address!",
   "contributeToNature": "You're contributing to nature! By choosing e-invoice, you reduce unnecessary paper usage. Thank you!",
-  "subTotal": "Subtotal:",
+  "subTotal": "Subtotal",
   "totalAmount": "Total Amount",
   "cancelTransaction": "Cancel Transaction",
   "cancelTransactionWarning": "You are about to cancel the order. If confirmed, the paid amount will be refunded, and the products will not be delivered to the customer.",
   "confirmPayment": "Confirm Payment",
-  "refundAmount": "Refund Amount: ",
+  "refundAmount": "Refund Amount",
   "cash": "Cash",
   "creditCard": "Credit Card",
   "simulatePayment": "Simulate Payment",
@@ -69,9 +69,9 @@
   "totalPrice": "Total Price",
   "paidWithCard": "Paid with card!",
   "paidInCash": "Paid in cash!",
-  "paidAmount": "Paid Amount:",
-  "remainingAmount": "Remaining Amount:",
-  "change": "Change:",
+  "paidAmount": "Paid Amount",
+  "remainingAmount": "Remaining Amount",
+  "change": "Change",
   "productName": "Product Name",
   "stockQuantity": "Stock Quantity",
   "productPrice": "Product Price",
@@ -108,7 +108,7 @@
   "amountPaid": "Amount Paid",
   "viewReceipt": "View Receipt",
   "returnProcessed": "-Return Processed!",
-  "productCount": "Product Count", 
+  "productCount": "Product Count",
   "date": "Date",
   "refundProcessing": "Refund Processing",
   "refundReceiptNumber": "Refund Receipt Number",
@@ -116,15 +116,37 @@
   "pleaseEnterReceiptNumber": "Please enter a receipt number before proceeding",
   "invalidReceiptNumber": "Invalid receipt number or canceled receipt",
   "canceledReceipt": "The entered receipt has been canceled!",
-  "totalTaxPaid": "Total Tax Paid: ",
-  "subtotalAmount": "Subtotal Amount: ",
+  "totalTaxPaid": "Total Tax Paid",
+  "subtotalAmount": "Subtotal Amount",
   "refundAmountUppercase": "REFUND AMOUNT",
   "approveRefund": "Approve Refund",
   "refundApprovalMessage": "Upon approval of the transaction, the refund amount should be delivered in cash or gift voucher",
-  "totalTaxRefunded": "Total Tax Refunded: ",
-  "refundSubtotal": "Refund Subtotal: ",
-  "refundTotal": "Refund Total: ",
+  "totalTaxRefunded": "Total Tax Refunded",
+  "refundSubtotal": "Refund Subtotal",
+  "refundTotal": "Refund Total",
   "refundReceiptRequired": "Receipt Number is Required for Refund Process!",
-  "printErrorMessage": "Returned receipts and invoices cannot be reissued!"
+  "printErrorMessage": "Returned receipts and invoices cannot be reissued!",
+  "barcodeEntry": "Barcode Entry",
+  "categories": "Categories",
+  "subCategories": "Sub Categories",
+  "searchByName": "Search by Name",
+  "transactionCancelConfirmation": "You are about to cancel the transaction. This will remove all products from the cart along with any active campaigns.",
+  "errorInvalidStudentID": "Invalid student ID or not a student!",
+  "buy3Pay2": "Buy 3 Pay 2",
+  "taxFreeForStudents": "Tax Free for Students",
+  "percentageDiscounts": "Percentage Discounts",
+  "subtotal": "Subtotal",
+  "search": "Search",
+  "add": "Add",
+  "remove": "Remove",
+  "delete": "Delete",
+  "quantity": "Quantity",
+  "discountedPrice": "Discounted Price",
+  "campaign": "Campaign",
+  "studentID": "Student ID",
+  "apply": "Apply",
+  "confirm": "Confirm",
+  "productShowcase": "Product Showcase",
+  "close": "Close"
 }
 
