created summary dashboard and elements multi-language support

--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -147,6 +147,39 @@
   "apply": "Apply",
   "confirm": "Confirm",
   "productShowcase": "Product Showcase",
-  "close": "Close"
+  "close": "Close",
+  "salesSummary": "Sales Summary",
+  "totalSalesAmount": "Total Sales Amount",
+  "totalAmountWithoutDiscount": "Total Amount Without Discount",
+  "totalPaidAmount": "Total Paid Amount",
+  "totalChange": "Total Change",
+  "totalTax": "Total Tax",
+  "totalAmountWithCard": "Total Amount With Card",
+  "totalAmountWithCash": "Total Amount With Cash",
+  "totalRefundedAmount": "Total Refunded Amount",
+  "totalShoppingAmount":"Total Shopping Amount",
+  "totalPriceWithoutDiscount":"Total Price Without Discount",
+  "totalAmountPaidInCash":"Total Amount Paid In Cash",
+  "totalAmountPaidInCard":"Total Amount Paid In Card",
+  "totalAmountPaidInGiftVoucher":"Total Amount Paid In Gift Voucher",
+  "totalAmountPaidWithCard":"Total Amount Paid With Card",
+  "bestsellers": "Bestsellers",
+  "topSellingCategory": "Top Selling Category",
+  "topSellingSubCategory": "Top Selling Sub Category",
+  "topSellingProduct": "Top Selling Product",
+  "topSellingCampaignProduct": "Top Selling Campaign Product",
+  "mostProfitableCategory": "Most Profitable Category",
+  "mostProfitableSubCategory": "Most Profitable Sub Category",
+  "mostProfitableProduct": "Most Profitable Product",
+  "mostRefundedProduct": "Most Refunded Product",
+  "mostSoldHour": "Most Sold Hour",
+  "leastSoldHour": "Least Sold Hour",
+  "outOfStockProducts": "Out of Stock Products",
+  "hour": "Hourly",
+  "daily": "Daily",
+  "month": "Monthly",
+  "year": "Yearly",
+  "all": "All Time",
+  "bests": "Bests"
 }
 
