--- a/src/locales/translations/tr.json
+++ b/src/locales/translations/tr.json
@@ -1,3 +1,185 @@
 {
-  "test": "React ve react-i18next'e hoş geldiniz"
+  "test": "React ve react-i18next'e hoş geldiniz",
+  "storeNumber": "Mağaza No",
+  "welcomeBack": "TEKRAR HOŞGELDİNİZ!",
+  "loginAccount": "Giriş Yapın",
+  "enterUsernamePassword": "Lütfen kullanıcı adınızı ve şifrenizi girin",
+  "username": "Kullanıcı Adı",
+  "password": "Şifre",
+  "login": "Giriş",
+  "errorTitle": "Hata",
+  "loginErrorMessage": "Geçersiz kullanıcı adı veya şifre!",
+  "loginSuccessMessage": "Giriş Başarılı, Hoş Geldiniz.",
+  "orderCreation": "Sipariş Oluşturma",
+  "products": "Ürünler",
+  "productEntry": "Ürün Girişi",
+  "returnProcesses": "İade İşlemleri",
+  "receipts": "Fişler",
+  "reports": "Raporlar",
+  "storeNo": "Mağaza No",
+  "cashRegisterNo": "Yazar Kasa No",
+  "ipNo": "IP No",
+  "version": "Versiyon",
+  "homepage": "Ana Sayfa",
+  "orderCreationScreen": "Sipariş Oluşturma Ekranı",
+  "paymentScreen": "Ödeme Ekranı",
+  "returnScreen": "İade Ekranı",
+  "productListingScreen": "Ürün Listeleme Ekranı",
+  "productView": "Ürün Görünümü",
+  "productAddScreen": "Ürün Ekleme Ekranı",
+  "viewingProduct": "Ürün Görüntüleniyor No",
+  "title": "Başlık",
+  "cashRegister": "Yazar Kasa",
+  "store": "Mağaza",
+  "settings": "AYARLAR",
+  "dark-mode": "Karanlık Mod",
+  "lang": "Dil",
+  "print-test": "Yazdırma Testi",
+  "noOpeningTimes": "Açılış saatleri mevcut değil",
+  "openingSoon": "Yakında açılıyor...",
+  "day": "Gün",
+  "startTime": "Başlangıç Saati",
+  "endTime": "Bitiş Saati",
+  "closed": "Kapalı",
+  "Monday": "Pazartesi",
+  "Tuesday": "Salı",
+  "Wednesday": "Çarşamba",
+  "Thursday": "Perşembe",
+  "Friday": "Cuma",
+  "Saturday": "Cumartesi",
+  "Sunday": "Pazar",
+  "offlineErrorTitle": "Oops! Şu anda çevrimdışıyız.",
+  "offlineErrorMessage": "Verdiğimiz rahatsızlıktan dolayı özür dileriz. Lütfen aşağıdaki çalışma saatlerimizi kontrol edin ve bu saatler içinde bizi tekrar ziyaret edin.",
+  "nextShopOpeningTime": "Sonraki Mağaza Açılış Saati",
+  "tryRefreshing": "Sayfayı yenilemeyi deneyin",
+  "eInvoice": "E-Fatura",
+  "customerEmail": "Müşteri E-postası",
+  "invalidEmailError": "Bu geçerli bir e-posta adresi değil!",
+  "contributeToNature": "Doğaya katkıda bulunuyorsunuz! E-fatura seçerek gereksiz kağıt kullanımını azaltıyorsunuz. Teşekkür ederiz!",
+  "subTotal": "Ara Toplam",
+  "totalAmount": "Toplam Tutar",
+  "cancelTransaction": "İşlemi İptal Et",
+  "cancelTransactionWarning": "Siparişi iptal etmek üzeresiniz. Onaylanırsa, ödenen tutar iade edilecek ve ürünler müşteriye teslim edilmeyecektir.",
+  "confirmPayment": "Ödemeyi Onayla",
+  "refundAmount": "İade Tutarı",
+  "cash": "Nakit",
+  "creditCard": "Kredi Kartı",
+  "simulatePayment": "Ödemeyi Simüle Et",
+  "simulatePaymentWarning": "Bu uygulama gerçek değil, bu nedenle ödemenin doğru yapılıp yapılmadığını varsaymalıyız!",
+  "totalPrice": "Toplam Fiyat",
+  "paidWithCard": "Kartla ödendi!",
+  "paidInCash": "Nakit ödendi!",
+  "paidAmount": "Ödenen Tutar",
+  "remainingAmount": "Kalan Tutar",
+  "change": "Para Üstü",
+  "productName": "Ürün Adı",
+  "stockQuantity": "Stok Miktarı",
+  "productPrice": "Ürün Fiyatı",
+  "taxPercentage": "Vergi Yüzdesi",
+  "productImageURL": "Ürün Resim URL'si",
+  "campaigns": "Kampanyalar",
+  "category": "Kategori",
+  "subCategory": "Alt Kategori",
+  "saveProduct": "Ürünü Kaydet",
+  "saveProductConfirmation": "Verileri veritabanına kaydetmek üzeresiniz",
+  "addToFavorites": "Favorilere Ekle",
+  "productWithoutBarcode": "Barkodu Olmayan Ürün",
+  "sellByWeight": "Ağırlığa Göre Sat",
+  "productEntrySuccessMessage": "Ürün Girişi Başarılı",
+  "price": "Fiyat",
+  "tax": "Vergi",
+  "stock": "Stok",
+  "photo": "Fotoğraf",
+  "pcs": "adt.",
+  "lbs": "lbs.",
+  "none": "Yok",
+  "buy3pay2": "3 Al 2 Öde",
+  "discount20": "%20 İndirim",
+  "studentTaxFree": "Öğrencilere Vergisiz!!!",
+  "cancel": "İptal",
+  "updateProduct": "Ürünü Güncelle",
+  "updateConfirmation": "Onaylarsanız, ürün girilen değerlerle güncellenecektir. Kategori ve alt kategori gibi temel ayrıntılar güncellenemez!",
+  "save": "Kaydet",
+  "pleaseEnterValue": "Lütfen bir değer girin.",
+  "productsDashboard": "Ürünler Kontrol Paneli",
+  "viewProduct": "Ürünü Görüntüle",
+  "cart": "Sepet",
+  "unit": "Birim",
+  "amountPaid": "Ödenen Tutar",
+  "viewReceipt": "Fişi Görüntüle",
+  "returnProcessed": "-İade İşlendi!",
+  "productCount": "Ürün Sayısı",
+  "date": "Tarih",
+  "refundProcessing": "İade İşleme",
+  "refundReceiptNumber": "İade Fiş Numarası",
+  "receiptNumber": "Fiş Numarası",
+  "pleaseEnterReceiptNumber": "Devam etmeden önce lütfen bir fiş numarası girin",
+  "invalidReceiptNumber": "Geçersiz fiş numarası veya iptal edilmiş fiş",
+  "canceledReceipt": "Girilen fiş iptal edilmiştir!",
+  "totalTaxPaid": "Toplam Ödenen Vergi",
+  "subtotalAmount": "Ara Toplam Tutarı",
+  "refundAmountUppercase": "İADE TUTARI",
+  "approveRefund": "İadeyi Onayla",
+  "refundApprovalMessage": "İşlemin onaylanması üzerine, iade tutarı nakit veya hediye çeki olarak teslim edilmelidir",
+  "totalTaxRefunded": "Toplam İade Edilen Vergi",
+  "refundSubtotal": "İade Ara Toplamı",
+  "refundTotal": "İade Toplamı",
+  "refundReceiptRequired": "İade İşlemi için Fiş Numarası Gereklidir!",
+  "printErrorMessage": "İade edilen fişler ve faturalar yeniden düzenlenemez!",
+  "barcodeEntry": "Barkod Girişi",
+  "categories": "Kategoriler",
+  "subCategories": "Alt Kategoriler",
+  "searchByName": "İsme Göre Ara",
+  "transactionCancelConfirmation": "İşlemi iptal etmek üzeresiniz. Bu, aktif kampanyalarla birlikte sepetteki tüm ürünleri kaldıracaktır.",
+  "errorInvalidStudentID": "Geçersiz öğrenci kimliği veya öğrenci değil!",
+  "buy3Pay2": "3 Al 2 Öde",
+  "taxFreeForStudents": "Öğrencilere Vergisiz",
+  "percentageDiscounts": "Yüzde İndirimleri",
+  "subtotal": "Ara Toplam",
+  "search": "Ara",
+  "add": "Ekle",
+  "remove": "Kaldır",
+  "delete": "Sil",
+  "quantity": "Miktar",
+  "discountedPrice": "İndirimli Fiyat",
+  "campaign": "Kampanya",
+  "studentID": "Öğrenci Kimliği",
+  "apply": "Uygula",
+  "confirm": "Onayla",
+  "productShowcase": "Ürün Vitrini",
+  "close": "Kapat",
+  "salesSummary": "Satış Özeti",
+  "totalSalesAmount": "Toplam Satış Tutarı",
+  "totalAmountWithoutDiscount": "İndirimsiz Toplam Tutar",
+  "totalPaidAmount": "Toplam Ödenen Tutar",
+  "totalChange": "Toplam Para Üstü",
+  "totalTax": "Toplam Vergi",
+  "totalAmountWithCard": "Kartla Toplam Tutar",
+  "totalAmountWithCash": "Nakitle Toplam Tutar",
+  "totalRefundedAmount": "Toplam İade Edilen Tutar",
+  "totalShoppingAmount":"Toplam Alışveriş Tutarı",
+  "totalPriceWithoutDiscount":"İndirimsiz Toplam Fiyat",
+  "totalAmountPaidInCash":"Nakit Olarak Ödenen Toplam Tutar",
+  "totalAmountPaidInCard":"Kartla Ödenen Toplam Tutar",
+  "totalAmountPaidInGiftVoucher":"Hediye Çeki ile Ödenen Toplam Tutar",
+  "totalAmountPaidWithCard":"Kartla Ödenen Toplam Tutar",
+  "bestsellers": "En Çok Satanlar",
+  "topSellingCategory": "En Çok Satan Kategori",
+  "topSellingSubCategory": "En Çok Satan Alt Kategori",
+  "topSellingProduct": "En Çok Satan Ürün",
+  "topSellingCampaignProduct": "En Çok Satan Kampanya Ürünü",
+  "mostProfitableCategory": "En Karlı Kategori",
+  "mostProfitableSubCategory": "En Karlı Alt Kategori",
+  "mostProfitableProduct": "En Karlı Ürün",
+  "mostRefundedProduct": "En Çok İade Edilen Ürün",
+  "mostSoldHour": "En Çok Satış Yapılan Saat",
+  "leastSoldHour": "En Az Satış Yapılan Saat",
+  "outOfStockProducts": "Stokta Olmayan Ürünler",
+  "hourly": "Saatlik",
+  "daily": "Günlük",
+  "monthly": "Aylık",
+  "yearly": "Yıllık",
+  "allTime": "Tüm Zamanlar",
+  "bests": "En İyiler",
+  "simulateSummaryLoadWarning": "Bu işlem uzun sürebilir ve sunucu maliyetlerine neden olabilir, devam etmek istediğinizden emin misiniz!"
 }
