minor bug fixes and data stability provided

--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -182,5 +182,7 @@
   "allTime": "All Time",
   "bests": "Bests",
   "simulateSummaryLoadWarning": "This process can take a long time and incur server costs, are you sure you want to continue!",
-  "register": "Register"
+  "register": "Register",
+  "cashierName": "Cashier Name"
 }
+
