--- a/src/locales/translations/tr.json
+++ b/src/locales/translations/tr.json
@@ -182,5 +182,7 @@
   "allTime": "Tüm Zamanlar",
   "bests": "En İyiler",
   "simulateSummaryLoadWarning": "Bu işlem uzun sürebilir ve sunucu maliyetlerine neden olabilir, devam etmek istediğinizden emin misiniz!",
-  "register": "Kasa"
+  "register": "Kasa",
+  "cashierName": "Kasiyer Adı"
 }
+
