created README.md to provide config and guide for easy customization

--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -184,6 +184,7 @@
   "simulateSummaryLoadWarning": "This process can take a long time and incur server costs, are you sure you want to continue!",
   "register": "Register",
   "cashierName": "Cashier Name",
-  "orderConfirmed": "Order Confirmed!"
+  "orderConfirmed": "Order Confirmed!",
+  "mainScreen": "Main Screen"
 }
 
