--- a/src/locales/translations/tr.json
+++ b/src/locales/translations/tr.json
@@ -185,6 +185,7 @@
   "register": "Kasa",
   "cashierName": "Kasiyer Adı",
   "orderConfirmed": "Sipariş Onaylandı!",
-  "mainScreen": "Ana Sayfa"
+  "mainScreen": "Ana Sayfa",
+  "alreadyLoggedIn": "Already logged in"
 }
 
